<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/currency2"
        app:layout_constraintEnd_toStartOf="@+id/countryTo"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countryFrom" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="40dp"
        android:text="@string/currency1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/moneyValue"
        android:layout_width="164dp"
        android:layout_height="59dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/countryFrom"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/countryTo"
        android:layout_width="163dp"
        android:layout_height="41dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:entries="@array/currencylist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moneyValue" />

    <Spinner
        android:id="@+id/countryFrom"
        android:layout_width="169dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:entries="@array/currencylist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/convertCurrency"
        android:layout_width="240dp"
        android:layout_height="205dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/bluebutton" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="368dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="88dp"
        android:text="@string/shakeHint"
        android:textColor="#86C0EF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convertCurrency" />

</androidx.constraintlayout.widget.ConstraintLayout>